# job-application-assistant

./: .gitignore  .gitmessage.txt  .prettierignore  .prettierrc.json  LICENSE  README.md
.github/: copilot-instructions.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1191d0464e85_update_job_application_model_add_.py  7c3dd987446a_initial_tables.py  8bb6ee6f8eec_add_tag_column_to_document_table.py  d985138e2cb8_add_description_column_to_document_table.py
backend/app/: main.py
backend/app/core/: config.py  enums.py
backend/app/core/exceptions/: __init__.py  base.py
backend/app/models/: __init__.py  assistant_step.py  base_model.py  document.py  document_job_application.py  job_application.py  job_application_assistant_step.py  user.py  user_session.py
backend/app/models/custom_types/: path_type.py
backend/app/models/mixins/: SoftDeleteMixin.py  __init__.py  soft_delete_mixin.py  timestamp_mixin.py
backend/app/schemas/: assistant_step.py  base_schema.py  document.py  document_envelope.py  job_application.py  user.py
backend/app/schemas/document_content/: __init__.py  base.py  cover_letter.py  job_description.py  master_list.py  profile.py  resume.py  supporting_document.py
backend/app/schemas/mixins/: date_range_mixin.py  timestamp_mixin.py
backend/app/utils/: string_formatters.py
frontend/: package.json
